err.txt
    Checking raytracer2 v0.1.0 (D:\AI stuff\stuff\raytracer2)
error[E0433]: failed to resolve: could not find `Maintain` in `wgpu`
   --> src\gpu\renderer.rs:325:27
    |
325 |         device.poll(wgpu::Maintain::Wait);
    |                           ^^^^^^^^ could not find `Maintain` in `wgpu`

warning: unused import: `std::sync::Arc`
 --> src\gpu\renderer.rs:1:5
  |
1 | use std::sync::Arc;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

warning: unused import: `Color`
 --> src\gpu\renderer.rs:7:20
  |
7 | use crate::image::{Color, PPMImage};
  |                    ^^^^^

warning: unused import: `random_vec3`
 --> src\material\dielectric.rs:7:43
  |
7 |     utils::{random_f64, random_unit_vec3, random_vec3},
  |                                           ^^^^^^^^^^^

warning: unused import: `std::f64::consts::PI`
 --> src\pdf.rs:6:5
  |
6 | use std::f64::consts::PI;
  |     ^^^^^^^^^^^^^^^^^^^^

error[E0533]: expected value, found struct variant `wgpu::PollType::Wait`
   --> src\gpu\renderer.rs:311:25
    |
311 |             device.poll(wgpu::PollType::Wait);
    |                         ^^^^^^^^^^^^^^^^^^^^ not a value
    |
help: you might have meant to create a new value of the struct
    |
311 |             device.poll(wgpu::PollType::Wait { submission_index: /* value */, timeout: /* value */ });
    |                                              +++++++++++++++++++++++++++++++++++++++++++++++++++++++

warning: variable does not need to be mutable
   --> src\main.rs:165:9
    |
165 |     let mut lights = HittableList::new();
    |         ----^^^^^^
    |         |
    |         help: remove this `mut`
    |
    = note: `#[warn(unused_mut)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `red`
   --> src\main.rs:167:9
    |
167 |     let red = Arc::new(Lambertian::new(Color::new(0.65, 0.05, 0.05)));
    |         ^^^ help: if this is intentional, prefix it with an underscore: `_red`
    |
    = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default

warning: unused variable: `green`
   --> src\main.rs:169:9
    |
169 |     let green = Arc::new(Lambertian::new(Color::new(0.12, 0.45, 0.15)));
    |         ^^^^^ help: if this is intentional, prefix it with an underscore: `_green`

warning: unused variable: `light_mat`
   --> src\main.rs:170:9
    |
170 |     let light_mat = Arc::new(DiffuseLight::new(Color::new(15.0, 15.0, 15.0)));
    |         ^^^^^^^^^ help: if this is intentional, prefix it with an underscore: `_light_mat`

Some errors have detailed explanations: E0433, E0533.
For more information about an error, try `rustc --explain E0433`.
warning: `raytracer2` (bin "raytracer2") generated 8 warnings
error: could not compile `raytracer2` (bin "raytracer2") due to 2 previous errors; 8 warnings emitted
